# cannabis-strain-analyzer

./: .env  .env.backup  .env.example  .gitignore  Architecture.md  DEVELOPER.md  HOW_THIS_WAS_BUILT.md  LICENSE  Makefile  README.md  app.py  auth.py  cannabis_app.db  clean_app.py  custom_strains.json  database.py  enhanced_strain_database.py  env.example  google_maps_integration.py  langgraph_agent.py  models.py  personalized_web_interface.py  pyproject.toml  requirements.txt  run_streamlined.py  setup_auth.py  simple_personalized_interface.py  simple_strain_analyzer.py  simple_tabbed_interface.py  streamlined_app.py  tabbed_interface.py  user_profiles.json  user_profiles.py  web_interface.py
.github/workflows/: ci.yml  release.yml
android-app/: BUILDING.md  QUICK_START.md  README.md  build.sh  local.properties.example  settings.gradle.kts
android-app/.github/workflows/: ci.yml  release.yml
android-app/app/: build.gradle.kts  proguard-rules.pro
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/assets/: strains.json
android-app/app/src/main/kotlin/com/strainanalyzer/app/: MainActivity.kt
android-app/app/src/main/res/drawable/: ic_launcher_foreground.xml
android-app/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android-app/scripts/: build_strain_database.py  refresh_strains_from_api.py  strain_config.json
budmash/: .gitignore  HOW_THIS_WAS_BUILT.md  README.md  gradle.properties  gradlew  local.properties  settings.gradle.kts
budmash/composeApp/: build.gradle.kts
budmash/composeApp/src/androidMain/: AndroidManifest.xml
budmash/composeApp/src/androidMain/kotlin/com/budmash/: MainActivity.kt
budmash/composeApp/src/androidMain/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
budmash/composeApp/src/commonMain/kotlin/com/budmash/ui/: App.kt
budmash/docs/plans/: 2025-12-27-llm-menu-parser-design.md  2025-12-27-llm-menu-parser-implementation.md  2025-12-28-photo-capture-design.md
budmash/gradle/: libs.versions.toml
budmash/shared/: build.gradle.kts
budmash/shared/src/androidMain/kotlin/com/budmash/capture/: ImageCapture.android.kt
budmash/shared/src/androidMain/kotlin/com/budmash/llm/: LlmConfigStorage.android.kt
budmash/shared/src/commonMain/kotlin/com/budmash/data/: Models.kt  (+1 more)
budmash/shared/src/commonMain/resources/: strains.json
composeApp/: build.gradle.kts  proguard-rules.pro
composeApp/src/androidMain/: AndroidManifest.xml
composeApp/src/androidMain/kotlin/com/budmash/: MainActivity.kt
composeApp/src/androidMain/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
composeApp/src/commonMain/kotlin/com/budmash/ui/: App.kt
composeApp/src/iosMain/kotlin/com/budmash/: MainViewController.kt
docs/plans/: 2025-12-27-budmash-design.md  2025-12-27-budmash-mvp-implementation.md  2025-12-28-photo-capture-plan.md  2025-12-28-vision-extraction-mvp.md  2026-01-05-on-device-ai-investigation.md
gradle/: libs.versions.toml
iosApp/iosApp/: ContentView.swift  Info.plist
iosApp/iosApp.xcodeproj/: project.pbxproj
iosApp/iosApp.xcodeproj/xcshareddata/xcschemes/: iosApp.xcscheme
legacy/web-backend/: Makefile  app.py
legacy/web-backend/tests/: test_database.py
screenshots/: README.md
shared/: build.gradle.kts
shared/src/androidMain/kotlin/com/budmash/capture/: ImageChunker.android.kt
shared/src/androidMain/kotlin/com/budmash/llm/: LlmConfigStorage.android.kt
shared/src/androidMain/kotlin/com/budmash/network/: HttpClient.android.kt
shared/src/commonMain/kotlin/com/budmash/capture/: ImageCapture.kt  ImageChunker.kt
shared/src/commonMain/kotlin/com/budmash/llm/: KtorLlmProvider.kt  LlmProvider.kt
shared/src/commonMain/kotlin/com/budmash/parser/: DefaultMenuParser.kt  HtmlPreprocessor.kt  LlmMenuExtractor.kt  MenuParser.kt  VisionMenuExtractor.kt
shared/src/commonMain/kotlin/com/budmash/profile/: ProfileStorage.kt
shared/src/commonTest/kotlin/com/budmash/data/: ModelsTest.kt
shared/src/iosMain/kotlin/com/budmash/capture/: ImageCapture.ios.kt  ImageChunker.ios.kt
shared/src/iosMain/kotlin/com/budmash/parser/: HtmlPreprocessor.ios.kt
templates/: clean_add_strain.html  clean_analyze.html  clean_dashboard.html  clean_favorites.html  clean_home.html  clean_results.html  config.html  index.html  personalized_index.html  simple_config.html  simple_home.html  simple_personalized_index.html  streamlined_analyze.html  streamlined_dashboard.html  streamlined_favorites.html  streamlined_home.html  streamlined_results.html  tabbed_interface.html
tests/: __init__.py  test_app.py  test_database.py
(+54 files in other folders)
